--- a/Test.yml
+++ b/Test.yml
@@ -33,8 +33,8 @@
         name: tomcat8
         state: started
     - name: Copy war file
-      fetch:
-        src: /var/lib/tomcat8/webapps/
-        dest: /ust/myapp/target/hello-1.0.war-{{comp}}
+      copy:
+        src: "tmp/{{comp}}/usr/myapp/target"
+        dest: /var/lib/tomcat8/webapps/
 
     
